--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   shared_preferences: ^2.0.11
   sembast: ^3.1.1+1
   path_provider: ^2.0.8
+  encrypt: '>=3.1.0'
+  crypto: '>=2.0.6'
 
 
   # The following adds the Cupertino Icons font to your application.
